--- a/package.json
+++ b/package.json
@@ -16,18 +16,29 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.3",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-tui": "^5.5.0",
+    "eslint-plugin-html": "^8.1.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
     "postcss": "^8",
