--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
