--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.48.0",
     "@tanstack/react-query-devtools": "^5.48.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.7.2",
     "lodash": "^4.17.21",
     "next": "14.2.4",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-query": "^3.39.3",
