--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.2",
     "js-sha256": "^0.11.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
