--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query-devtools": "^5.48.0",
     "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.7.2",
+    "cookies-next": "^4.2.1",
     "js-sha256": "^0.11.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.4.4",
